--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="app">
       <h1 class="text-xs">HELLO WORLD</h1>
       <p class="text-9xl">FUNKAR TAILWIND?</p>
+      <p>Funkar denna uppdatering?</p>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
