--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
   </head>
   <body>
     <div id="app">
-      <h1 class="text-xs">HELLO WORLD</h1>
-      <p class="text-9xl">FUNKAR TAILWIND?</p>
-      <p>Funkar denna uppdatering?</p>
+      <!-- <div id="nav" class="flex flex-col left-0 bg-slate-600 w-28 h-full fixed">
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+      </div> -->
+      <div id="content">
+        <h1 class="text-xs">HELLO WORLD</h1>
+        <p class="text-9xl">FUNKAR TAILWIND?</p>
+        <p>Funkar denna uppdatering?</p>
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
