commit to branch via terminal

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
       </div> -->
+      <div class="lg:h-screen bg-amber-700"></div>
+      <div class="lg:h-screen bg-amber-600"></div>
+      <div class="lg:h-screen bg-amber-400"></div>
+      <div class="lg:h-screen bg-amber-200"></div>
       <div id="content">
         <h1 class="text-xs">HELLO WORLD</h1>
         <p class="text-9xl">FUNKAR TAILWIND?</p>
