--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
       </div> -->
-      <div class="lg:h-screen bg-amber-700"></div>
-      <div class="lg:h-screen bg-amber-600"></div>
-      <div class="lg:h-screen bg-amber-400"></div>
-      <div class="lg:h-screen bg-amber-200"></div>
+      <section class="lg:h-screen bg-amber-700"></section>
+      <section class="lg:h-screen bg-amber-600"></section>
+      <section class="lg:h-screen bg-amber-500"></section>
+      <section class="lg:h-screen bg-amber-400"></section>
+      <section class="lg:h-screen bg-amber-300"></section>
+      <section class="lg:h-screen bg-amber-200"></section>
+      <section class="lg:h-screen bg-amber-100"></section>
       <div id="content">
         <h1 class="text-xs">HELLO WORLD</h1>
         <p class="text-9xl">FUNKAR TAILWIND?</p>
