added content to html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,72 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
       </div> -->
-      <section class="lg:h-screen bg-amber-700"></section>
-      <section class="lg:h-screen bg-amber-600"></section>
-      <section class="lg:h-screen bg-amber-500"></section>
-      <section class="lg:h-screen bg-amber-400"></section>
-      <section class="lg:h-screen bg-amber-300"></section>
-      <section class="lg:h-screen bg-amber-200"></section>
-      <section class="lg:h-screen bg-amber-100"></section>
+      <section class="lg:h-screen bg-amber-700 flex justify-center">
+        <div class="flex flex-col justify-center align-center w-3/4">
+          <h1 class="text-center">YRGO</h1>
+          <p>
+            1 Grattis! Du uppfyller förkunskapskraven för vår utbildning och har
+            tagit dig vidare i ansökningsprocessen. Välkommen till urvalsprov
+            för YRGO Game Creator Programmer! På den här webbplatsen hittar du
+            mer information om hur hela processen kommer gå till.
+          </p>
+        </div>
+      </section>
+      <section class="lg:h-screen bg-amber-600 flex justify-center">
+        <div class="flex flex-col justify-center align-center w-3/4">
+          <h2 class="text-center">Vi vill lära känna dig</h2>
+          <p>
+            Därför ber vi dig svara på några frågor. Du kan i lugn och ro svara
+            på våra frågor med hjälp av din mobil eller dator och webbkamera.
+          </p>
+        </div>
+      </section>
+      <section class="lg:h-screen bg-amber-500 flex justify-center">
+        <div class="flex flex-col justify-center align-center w-3/4">
+          <h2 class="text-center">Dags för urvalsprov</h2>
+          <p>
+            Det kan kännas nervöst, vi vet - men det kommer bli kul! Våra elever
+            kommer att finnas på plats för att möta dig. I provsalen kan du
+            känna sig bekväm och välja sittplats själv.
+          </p>
+        </div>
+      </section>
+      <section class="lg:h-screen bg-amber-400 flex justify-center">
+        <div class="flex flex-col justify-center align-center w-3/4">
+          <h2 class="text-center">Provet</h2>
+          <p>
+            Själva urvalsprovet består av olika delar för att vi ska få en så
+            bred bild av dina kunskaper som möjligt. ✅ Öppna frågor ✅ Frågor
+            om AI ✅ Matcha kod ✅ Kod utan kod ✅ Spelfrågor Vid behov finns
+            möjlighet att göra provet muntligt. Kontakta oss för mer
+            information.
+          </p>
+        </div>
+      </section>
+      <section class="lg:h-screen bg-amber-300 flex justify-center">
+        <div class="flex flex-col justify-center align-center w-3/4">
+          <h2 class="text-center">Efter provet</h2>
+          <p>
+            Vill du fika, diskutera svar eller snacka spel? Du är varmt
+            välkommen att träffa våra elever på lite häng.
+          </p>
+        </div>
+      </section>
+      <section class="lg:h-screen bg-amber-200 flex justify-center">
+        <div class="flex flex-col justify-center align-center w-3/4">
+          <h2 class="text-center">För lärare</h2>
+          <p></p>
+        </div>
+      </section>
+      <section class="lg:h-screen bg-amber-100 flex justify-center">
+        <div class="flex flex-col justify-center align-center w-3/4">
+          <h2 class="text-center">Personerna bakom konceptet:</h2>
+          <p>
+            Mikaelah Petter Nina Simon Fyra YRGO-elever som överlevt sina
+            urvalsprov.
+          </p>
+        </div>
+      </section>
       <div id="content">
         <h1 class="text-xs">HELLO WORLD</h1>
         <p class="text-9xl">FUNKAR TAILWIND?</p>
