--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="/contact">Contact</a>
       </div> -->
       <section class="lg:h-screen bg-amber-700 flex justify-center">
+        <img src="./public/blobs/blob_1.svg" class="h-32 absolute" alt="blob" />
         <div class="flex flex-col justify-center align-center w-3/4">
           <h1 class="text-center">YRGO</h1>
           <p>
