--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <a href="/contact">Contact</a>
       </div> -->
       <section class="lg:h-screen bg-amber-700 flex justify-center">
-        <img src="./public/blobs/blob_1.svg" class="h-32 absolute" alt="blob" />
+        <img src="./public/blobs/blob_1.svg" class="h-32" alt="blob" />
+        <img src="./public/blobs/blob_2.svg" class="h-32" alt="blob" />
+        <img src="./public/blobs/blob_3.svg" class="h-32" alt="blob" />
+        <img src="./public/blobs/blob_4.svg" class="h-32" alt="blob" />
         <div class="flex flex-col justify-center align-center w-3/4">
           <h1 class="text-center">YRGO</h1>
           <p>
@@ -80,11 +83,6 @@
           </p>
         </div>
       </section>
-      <div id="content">
-        <h1 class="text-xs">HELLO WORLD</h1>
-        <p class="text-9xl">FUNKAR TAILWIND?</p>
-        <p>Funkar denna uppdatering?</p>
-      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
