--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
       </div> -->
-      <section class="lg:h-screen bg-amber-700 flex justify-center">
+      <section
+        class="lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex justify-center"
+      >
         <img src="./public/blobs/blob_1.svg" class="h-32" alt="blob" />
         <img src="./public/blobs/blob_2.svg" class="h-32" alt="blob" />
         <img src="./public/blobs/blob_3.svg" class="h-32" alt="blob" />
@@ -28,7 +30,9 @@
           </p>
         </div>
       </section>
-      <section class="lg:h-screen bg-amber-600 flex justify-center">
+      <section
+        class="lg:h-screen bg-gradient-to-b from-orange-300 to-yellow-200 flex justify-center"
+      >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Vi vill lära känna dig</h2>
           <p>
@@ -37,7 +41,9 @@
           </p>
         </div>
       </section>
-      <section class="lg:h-screen bg-amber-500 flex justify-center">
+      <section
+        class="lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center"
+      >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Dags för urvalsprov</h2>
           <p>
@@ -47,7 +53,9 @@
           </p>
         </div>
       </section>
-      <section class="lg:h-screen bg-amber-400 flex justify-center">
+      <section
+        class="lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center"
+      >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Provet</h2>
           <p>
@@ -59,7 +67,9 @@
           </p>
         </div>
       </section>
-      <section class="lg:h-screen bg-amber-300 flex justify-center">
+      <section
+        class="lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex justify-center"
+      >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Efter provet</h2>
           <p>
@@ -68,13 +78,15 @@
           </p>
         </div>
       </section>
-      <section class="lg:h-screen bg-amber-200 flex justify-center">
+      <section
+        class="lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center"
+      >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">För lärare</h2>
           <p></p>
         </div>
       </section>
-      <section class="lg:h-screen bg-amber-100 flex justify-center">
+      <section class="lg:h-screen bg-purple-200 flex justify-center">
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Personerna bakom konceptet:</h2>
           <p>
