--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <div id="app">
-      <!-- <div id="nav" class="flex flex-col left-0 bg-slate-600 w-28 h-full fixed">
+      <div
+        id="nav"
+        class="flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0"
+      >
         <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
-      </div> -->
+      </div>
       <section class="lg:h-screen bg-amber-700 flex justify-center">
         <img src="./public/blobs/blob_1.svg" class="h-32" alt="blob" />
         <img src="./public/blobs/blob_2.svg" class="h-32" alt="blob" />
