--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         class="flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0"
       >
         <a href="/">Home</a>
-        <a href="/about">About</a>
+        <a id="abt" href="/about">About</a>
         <a href="/contact">Contact</a>
-      </div> -->
+      </div>
       <section
         class="lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex justify-center"
       >
