--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app">
+    <div class="scroll-container" id="app">
       <div
         id="nav"
         class="flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0"
       >
-        <a href="/">Home</a>
-        <a id="abt" href="/about">About</a>
-        <a href="/contact">Contact</a>
+        <a id="sectionOne" href="/">YRGO</a>
+        <a id="sectionTwo" href="/about">Vi vill lära känna dig</a>
+        <a id="sectionThree" href="/contact">Dags för urvalsprov</a>
+        <a id="sectionFour" href="">Provet</a>
+        <a id="sectionFive" href="">Efter provet</a>
+        <a id="sectionSix" href="">För lärare</a>
+        <a id="sectionSeven" href="">Personerna bakom konceptet</a>
       </div>
       <section
-        class="lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex justify-center"
       >
         <img src="./public/blobs/blob_1.svg" class="h-2/4" alt="blob" />
         <img src="./public/blobs/blob_2.svg" class="h-32" alt="blob" />
@@ -36,7 +40,7 @@
         </div>
       </section>
       <section
-        class="lg:h-screen bg-gradient-to-b from-orange-300 to-yellow-200 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-orange-300 to-yellow-200 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Vi vill lära känna dig</h2>
@@ -47,7 +51,7 @@
         </div>
       </section>
       <section
-        class="lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Dags för urvalsprov</h2>
@@ -73,7 +77,7 @@
         </div>
       </section>
       <section
-        class="lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Efter provet</h2>
@@ -84,14 +88,16 @@
         </div>
       </section>
       <section
-        class="lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">För lärare</h2>
           <p></p>
         </div>
       </section>
-      <section class="lg:h-screen bg-purple-200 flex justify-center">
+      <section
+        class="scroll-area lg:h-screen bg-purple-200 flex justify-center"
+      >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Personerna bakom konceptet:</h2>
           <p>
