--- a/index.html
+++ b/index.html
@@ -23,15 +23,20 @@
       <section
         class="scroll-area lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex justify-center"
       >
-        <img src="./public/blobs/blob_1.svg" class="h-2/4" alt="blob" />
-        <img src="./public/blobs/blob_2.svg" class="h-32" alt="blob" />
-        <img src="./public/blobs/blob_3.svg" class="h-32" alt="blob" />
-        <img src="./public/blobs/blob_4.svg" class="h-32" alt="blob" />
+        <!-- <img src="/blobs/blob_1.svg" class="h-2/4" alt="blob" />
+        <img src="/blobs/blob_2.svg" class="h-32" alt="blob" />
+        <img src="/blobs/blob_3.svg" class="h-32" alt="blob" />
+        <img src="/blobs/blob_4.svg" class="h-32" alt="blob" /> -->
         <div
-          class="flex flex-col justify-center align-center w-3/4 bg-red-200 max-h-44"
+          class="flex flex-col justify-center items-center h-2/5 w-2/5 relative"
         >
-          <h1 class="text-center">YRGO</h1>
-          <p>
+          <img
+            src="/textblob/textblob_1.svg"
+            class="absolute z-0 h-full w-full"
+            alt="blob"
+          />
+          <h1 class="text-center z-10 relative text-lg">YRGO</h1>
+          <p class="text-sm text-center px-6 z-10">
             1 Grattis! Du uppfyller förkunskapskraven för vår utbildning och har
             tagit dig vidare i ansökningsprocessen. Välkommen till urvalsprov
             för YRGO Game Creator Programmer! På den här webbplatsen hittar du
