--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Mali&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -43,8 +43,8 @@
             class="absolute z-0 h-full w-full"
             alt="blob"
           />
-          <h1 class="text-center z-10 relative text-5xl font-archivo">YRGO</h1>
-          <p class="text-lg text-center px-6 z-10 font-inter">
+          <h1 class="text-center z-10 relative text-5xl font-gloria">YRGO</h1>
+          <p class="text-lg text-center px-6 z-10 font-mali">
             1 Grattis! Du uppfyller förkunskapskraven för vår utbildning och har
             tagit dig vidare i ansökningsprocessen. Välkommen till urvalsprov
             för YRGO Game Creator Programmer! På den här webbplatsen hittar du
