--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0"
+        class="items-center flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center"
       >
-        <a id="sectionOne" href="/">YRGO</a>
-        <a id="sectionTwo" href="/about">Vi vill lära känna dig</a>
-        <a id="sectionThree" href="/contact">Dags för urvalsprov</a>
-        <a id="sectionFour" href="">Provet</a>
-        <a id="sectionFive" href="">Efter provet</a>
-        <a id="sectionSix" href="">För lärare</a>
-        <a id="sectionSeven" href="">Personerna bakom konceptet</a>
+        <a id="sectionOneAnchor" href="/">YRGO</a>
+        <a id="sectionTwoAnchor" href="/about">Rubrik2</a>
+        <a id="sectionThreeAnchor" href="/contact">Rubrik3</a>
+        <a id="sectionFourAnchor" href="">Rubrik4</a>
+        <a id="sectionFiveAnchor" href="">Rubrik5</a>
+        <a id="sectionSixAnchor" href="">Rubrik6</a>
+        <a id="sectionSevenAnchor" href="">Rubrik7</a>
       </div>
       <section
         class="scroll-area lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex justify-center"
