--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="items-center flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center"
+        class="items-center flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center justify-center"
       >
         <a id="sectionOneAnchor" href="/">YRGO</a>
         <a id="sectionTwoAnchor" href="/about">Rubrik2</a>
