--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
       href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="items-center flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center justify-center"
+        class="flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center justify-center"
       >
         <a id="sectionOneAnchor" href="/">YRGO</a>
         <a id="sectionTwoAnchor" href="/about">Rubrik2</a>
@@ -43,12 +47,14 @@
             class="absolute z-0 h-full w-full"
             alt="blob"
           />
-          <h1 class="text-center z-10 relative text-5xl font-gloria">YRGO</h1>
+          <h1 class="text-center z-10 relative text-5xl font-bowlby">
+            Grattis!
+          </h1>
           <p class="text-lg text-center px-6 z-10 font-mali">
-            1 Grattis! Du uppfyller förkunskapskraven för vår utbildning och har
-            tagit dig vidare i ansökningsprocessen. Välkommen till urvalsprov
-            för YRGO Game Creator Programmer! På den här webbplatsen hittar du
-            mer information om hur hela processen kommer gå till.
+            Du uppfyller förkunskapskraven för vår utbildning och har tagit dig
+            vidare i ansökningsprocessen. Välkommen till urvalsprov för YRGO
+            Game Creator Programmer! På den här webbplatsen hittar du mer
+            information om hur hela processen kommer gå till.
           </p>
         </div>
       </section>
