--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
         id="nav"
         class="items-center flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center justify-center"
       >
-        <a id="sectionOneAnchor" href="/">YRGO</a>
-        <a id="sectionTwoAnchor" href="/about">Rubrik2</a>
-        <a id="sectionThreeAnchor" href="/contact">Rubrik3</a>
-        <a id="sectionFourAnchor" href="">Rubrik4</a>
-        <a id="sectionFiveAnchor" href="">Rubrik5</a>
-        <a id="sectionSixAnchor" href="">Rubrik6</a>
-        <a id="sectionSevenAnchor" href="">Rubrik7</a>
+        <a class="scale-up-anchor" id="sectionOneAnchor" href="#section-one"
+          >Rubrik1</a
+        >
+        <a id="sectionTwoAnchor" href="#section-two">Rubrik2</a>
+        <a id="sectionThreeAnchor" href="#section-three">Rubrik3</a>
+        <a id="sectionFourAnchor" href="#section-four">Rubrik4</a>
+        <a id="sectionFiveAnchor" href="#section-five">Rubrik5</a>
+        <a id="sectionSixAnchor" href="#section-six">Rubrik6</a>
+        <a id="sectionSevenAnchor" href="#section-seven">Rubrik7</a>
       </div>
       <section
+        id="section-one"
         class="scroll-area lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex justify-center items-center"
       >
         <!-- <img src="/blobs/blob_1.svg" class="h-2/4" alt="blob" />
@@ -53,6 +56,7 @@
         </div>
       </section>
       <section
+        id="section-two"
         class="scroll-area lg:h-screen bg-gradient-to-b from-orange-300 to-yellow-200 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
@@ -64,6 +68,7 @@
         </div>
       </section>
       <section
+        id="section-three"
         class="scroll-area lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
@@ -76,7 +81,8 @@
         </div>
       </section>
       <section
-        class="lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center"
+        id="section-four"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
           <h2 class="text-center">Provet</h2>
@@ -90,6 +96,7 @@
         </div>
       </section>
       <section
+        id="section-five"
         class="scroll-area lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
@@ -101,6 +108,7 @@
         </div>
       </section>
       <section
+        id="section-six"
         class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
@@ -109,6 +117,7 @@
         </div>
       </section>
       <section
+        id="section-seven"
         class="scroll-area lg:h-screen bg-purple-200 flex justify-center"
       >
         <div class="flex flex-col justify-center align-center w-3/4">
