started second textblob

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h1 class="text-center z-10 relative text-5xl font-bowlby">
             Grattis!
           </h1>
-          <p class="text-lg text-center px-6 z-10 font-mali">
+          <p class="text-lg text-center px-8 z-10 font-mali">
             Du uppfyller förkunskapskraven för vår utbildning och har tagit dig
             vidare i ansökningsprocessen. Välkommen till urvalsprov för YRGO
             Game Creator Programmer! På den här webbplatsen hittar du mer
@@ -61,11 +61,23 @@
       <section
         class="scroll-area lg:h-screen bg-gradient-to-b from-orange-300 to-yellow-200 flex justify-center"
       >
-        <div class="flex flex-col justify-center align-center w-3/4">
-          <h2 class="text-center">Vi vill lära känna dig</h2>
-          <p>
+        <div
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative bg-slate-200"
+        >
+          <img
+            src="/textblob/textblob_2.svg"
+            class="absolute z-0 h-full w-full"
+            alt="blob"
+          />
+          <h1 class="text-center z-10 relative text-3xl font-bowlby">
+            Vi vill lära känna dig
+          </h1>
+          <p class="text-lg text-center px-28 z-10 font-mali">
             Därför ber vi dig svara på några frågor. Du kan i lugn och ro svara
-            på våra frågor med hjälp av din mobil eller dator och webbkamera.
+            på våra frågor med hjälp av din mobil eller dator med webbkamera via
+            ansökningsplattformen. Vi kommer bland annat be dig berätta om dig
+            själv, hur du jobbar i grupp och dina favoritspel. Du spelar själv
+            in svaren i små videoklipp, varje klipp får vara max 2 minuter.
           </p>
         </div>
       </section>
