--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="/blobs/blob_3.svg" class="h-32" alt="blob" />
         <img src="/blobs/blob_4.svg" class="h-32" alt="blob" /> -->
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative bg-slate-200"
         >
           <img
             src="/textblob/textblob_1.svg"
@@ -63,8 +63,10 @@
       </section>
       <section
         id="section-two"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-orange-300 to-yellow-200 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-orange-300 to-yellow-200 flex flex-row justify-center items-center"
       >
+        <img src="/blobs/blob_2.svg" class="h-2/4 w-2/5" alt="blob" />
+
         <div
           class="flex flex-col justify-center items-center h-3/5 w-3/5 relative bg-slate-200"
         >
