all textsections inserted

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="/blobs/blob_3.svg" class="h-32" alt="blob" />
         <img src="/blobs/blob_4.svg" class="h-32" alt="blob" /> -->
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative bg-slate-200"
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
         >
           <img
             src="/textblob/textblob_1.svg"
@@ -68,7 +68,7 @@
         <img src="/blobs/blob_2.svg" class="h-2/4 w-2/5" alt="blob" />
 
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative bg-slate-200"
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
         >
           <img
             src="/textblob/textblob_2.svg"
@@ -91,12 +91,27 @@
         id="section-three"
         class="scroll-area lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center"
       >
-        <div class="flex flex-col justify-center align-center w-3/4">
-          <h2 class="text-center">Dags för urvalsprov</h2>
-          <p>
+        <img src="/blobs/blob_3.svg" class="h-2/4 w-2/5" alt="blob" />
+
+        <div
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+        >
+          <img
+            src="/textblob/textblob_1.svg"
+            class="absolute z-0 h-full w-full rotate-180"
+            alt="blob"
+          />
+          <h1 class="text-center z-10 relative text-3xl font-bowlby">
+            Dags för urvalsprov
+          </h1>
+          <p class="text-lg text-center px-28 z-10 font-mali">
             Det kan kännas nervöst, vi vet - men det kommer bli kul! Våra elever
-            kommer att finnas på plats för att möta dig. I provsalen kan du
-            känna sig bekväm och välja sittplats själv.
+            kommer att finnas på plats på skolan för att möta dig, besvara
+            frågor innan provet och hålla i aktiviteter, så du har möjlighet att
+            lära känna andra sökande innan provet. Föredrar du att sitta, stå,
+            eller halvligga när du gör ditt prov? I provsalen kan du känna sig
+            bekväm och välja sittplats själv. Vi erbjuder bord i olika höjder,
+            stolar, fåtöljer och saccosäckar.
           </p>
         </div>
       </section>
@@ -104,14 +119,26 @@
         id="section-four"
         class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center"
       >
-        <div class="flex flex-col justify-center align-center w-3/4">
-          <h2 class="text-center">Provet</h2>
-          <p>
+        <img src="/blobs/blob_5.svg" class="h-2/4 w-2/5" alt="blob" />
+
+        <div
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+        >
+          <img
+            src="/textblob/textblob_2.svg"
+            class="absolute z-0 h-full w-full rotate-180"
+            alt="blob"
+          />
+          <h1 class="text-center z-10 relative text-3xl font-bowlby">Provet</h1>
+          <p class="text-lg text-center px-28 z-10 font-mali">
             Själva urvalsprovet består av olika delar för att vi ska få en så
-            bred bild av dina kunskaper som möjligt. ✅ Öppna frågor ✅ Frågor
-            om AI ✅ Matcha kod ✅ Kod utan kod ✅ Spelfrågor Vid behov finns
-            möjlighet att göra provet muntligt. Kontakta oss för mer
-            information.
+            bred bild av dina kunskaper som möjligt. ✅ Öppna frågor - du får
+            reflektera och svara på en fråga med egna ord ✅ Frågor om AI - AI
+            är en del av branschens framtid ✅ Matcha kod - para ihop rätt kod
+            med rätt resultat (?) ✅ Kod utan kod - vi vill se att du kan
+            beskriva korrekta processer ✅ Spelfrågor - berätta om och diskutera
+            olika spel Vid behov finns möjlighet att göra provet muntligt eller
+            i en enskild lokal. Kontakta oss för mer information.
           </p>
         </div>
       </section>
@@ -119,11 +146,24 @@
         id="section-five"
         class="scroll-area lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex justify-center"
       >
-        <div class="flex flex-col justify-center align-center w-3/4">
-          <h2 class="text-center">Efter provet</h2>
-          <p>
+        <img src="/blobs/blob_7.svg" class="h-2/4 w-2/5" alt="blob" />
+
+        <div
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+        >
+          <img
+            src="/textblob/textblob_3.svg"
+            class="absolute z-0 h-full w-full"
+            alt="blob"
+          />
+          <h1 class="text-center z-10 relative text-3xl font-bowlby">
+            Efter provet
+          </h1>
+          <p class="text-lg text-center px-28 z-10 font-mali">
             Vill du fika, diskutera svar eller snacka spel? Du är varmt
-            välkommen att träffa våra elever på lite häng.
+            välkommen att träffa våra elever på lite häng. Det är ett suveränt
+            tillfälle att networka med framtida branschkollegor! Ryktet säger
+            att urvalsprovs-ölen på kvällen är tradition.
           </p>
         </div>
       </section>
@@ -131,21 +171,55 @@
         id="section-six"
         class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center"
       >
-        <div class="flex flex-col justify-center align-center w-3/4">
-          <h2 class="text-center">För lärare</h2>
-          <p></p>
+        <img src="/blobs/blob_8.svg" class="h-2/4 w-2/5" alt="blob" />
+
+        <div
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+        >
+          <img
+            src="/textblob/textblob_1.svg"
+            class="absolute z-0 h-full w-full"
+            alt="blob"
+          />
+          <h1 class="text-center z-10 relative text-3xl font-bowlby">
+            För lärare
+          </h1>
+          <p class="text-lg text-center px-28 z-10 font-mali">
+            På vilket sätt är då detta en kostnadseffektiv lösning?
+            Automatiserad intervjuprocess - tack vare att den sökande själv
+            spelar in svar på intervjufrågorna behöver mindre tid ägnas åt att
+            hålla intervjuer Mångfacetterat urvalsprov - förutom att provet gör
+            det möjligt för fler att briljera i de olika delarna, består det
+            även av frågor som inte kräver manuell rättning - win win! Allt på
+            en plattform - allt material från ansökan, prov och intervjuer
+            samlas på en plattform. Mindre pappersarbete att hålla koll på, och
+            mycket enklare att få en överblick. Reklam för YRGO - en
+            ansökningsprocess som snarare kan beskrivas som en minnesvärd
+            upplevelse är något man vill berätta om för nära och kära.
+            Marknadsföring som sköter sig själv innebär mindre utgifter för
+            YRGO. Tillgänglighet - det är självklart att ansökningsprocessen ska
+            vara tillgänglig för alla. Därför uppfyller ansökningsplattformen
+            WCAG-riktlinjerna, och ansökande har alltid möjlighet att be om
+            anpassningar, så som muntliga prov, mer tid eller egen provsal.
+          </p>
         </div>
       </section>
       <section
         id="section-seven"
         class="scroll-area lg:h-screen bg-purple-200 flex justify-center"
       >
-        <div class="flex flex-col justify-center align-center w-3/4">
-          <h2 class="text-center">Personerna bakom konceptet:</h2>
-          <p>
-            Mikaelah Petter Nina Simon Fyra YRGO-elever som överlevt sina
-            urvalsprov.
-          </p>
+        <div
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+        >
+          <img
+            src="/textblob/textblob_3.svg"
+            class="absolute z-0 h-full w-full rotate-180"
+            alt="blob"
+          />
+          <h1 class="text-center z-10 relative text-3xl font-bowlby">
+            Personerna bakom konceptet:
+          </h1>
+          <p class="text-lg text-center px-28 z-10 font-mali"></p>
         </div>
       </section>
     </div>
