--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center justify-center"
+        class="z-50 flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center justify-center"
       >
         <a class="scale-up-anchor" id="sectionOneAnchor" href="#section-one"
           >Rubrik1</a
