adjusting sections content and alignment

--- a/index.html
+++ b/index.html
@@ -89,10 +89,8 @@
       </section>
       <section
         id="section-three"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center items-center"
       >
-        <img src="/blobs/blob_3.svg" class="h-2/4 w-2/5" alt="blob" />
-
         <div
           class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
         >
@@ -114,10 +112,11 @@
             stolar, fåtöljer och saccosäckar.
           </p>
         </div>
+        <img src="/blobs/blob_3.svg" class="h-2/4 w-2/5" alt="blob" />
       </section>
       <section
         id="section-four"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center items-center"
       >
         <img src="/blobs/blob_5.svg" class="h-2/4 w-2/5" alt="blob" />
 
@@ -144,10 +143,8 @@
       </section>
       <section
         id="section-five"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex align-center justify-center items-center"
       >
-        <img src="/blobs/blob_7.svg" class="h-2/4 w-2/5" alt="blob" />
-
         <div
           class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
         >
@@ -166,10 +163,11 @@
             att urvalsprovs-ölen på kvällen är tradition.
           </p>
         </div>
+        <img src="/blobs/blob_7.svg" class="h-2/4 w-2/5" alt="blob" />
       </section>
       <section
         id="section-six"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center items-center"
       >
         <img src="/blobs/blob_8.svg" class="h-2/4 w-2/5" alt="blob" />
 
@@ -206,7 +204,7 @@
       </section>
       <section
         id="section-seven"
-        class="scroll-area lg:h-screen bg-purple-200 flex justify-center"
+        class="scroll-area lg:h-screen bg-purple-200 flex justify-center items-center"
       >
         <div
           class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
