--- a/index.html
+++ b/index.html
@@ -171,13 +171,11 @@
         id="section-six"
         class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center"
       >
-        <img src="/blobs/blob_8.svg" class="h-2/4 w-2/5" alt="blob" />
-
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-col justify-center items-center h-full w-5/6 relative bg-cyan-100"
         >
           <img
-            src="/textblob/textblob_1.svg"
+            src="/textblob/textblob_6.svg"
             class="absolute z-0 h-full w-full"
             alt="blob"
           />
@@ -212,7 +210,7 @@
           class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
         >
           <img
-            src="/textblob/textblob_3.svg"
+            src="/textblob/textblob_4.svg"
             class="absolute z-0 h-full w-full rotate-180"
             alt="blob"
           />
