--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="z-50 flex flex-col left-0 bg-slate-600 w-28 h-full fixed bg-opacity-0 pl-3.5 items-center justify-center"
+        class="z-50 flex flex-col left-0 bg-slate-600 w-32 h-full fixed bg-opacity-0 pl-1.5 justify-center gap-1.5"
       >
         <a class="scale-up-anchor" id="sectionOneAnchor" href="#section-one"
-          >Rubrik1</a
-        >
-        <a id="sectionTwoAnchor" href="#section-two">Rubrik2</a>
-        <a id="sectionThreeAnchor" href="#section-three">Rubrik3</a>
-        <a id="sectionFourAnchor" href="#section-four">Rubrik4</a>
-        <a id="sectionFiveAnchor" href="#section-five">Rubrik5</a>
-        <a id="sectionSixAnchor" href="#section-six">Rubrik6</a>
-        <a id="sectionSevenAnchor" href="#section-seven">Rubrik7</a>
+          >Grattis!
+        </a>
+        <a id="sectionTwoAnchor" href="#section-two">Intervju</a>
+        <a id="sectionThreeAnchor" href="#section-three">Urvalsprov</a>
+        <a id="sectionFourAnchor" href="#section-four">Provet</a>
+        <a id="sectionFiveAnchor" href="#section-five">Efter provet</a>
+        <a id="sectionSixAnchor" href="#section-six">För lärare</a>
+        <a id="sectionSevenAnchor" href="#section-seven">Om oss</a>
       </div>
       <section
         id="section-one"
