--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -180,7 +180,7 @@
           <h1 class="text-center z-10 relative text-3xl font-bowlby">
             För lärare
           </h1>
-          <p class="text-lg text-center px-28 z-10 font-mali">
+          <p class="text-lg text-center px-40 z-10 font-mali">
             På vilket sätt är då detta en kostnadseffektiv lösning?
             Automatiserad intervjuprocess - tack vare att den sökande själv
             spelar in svar på intervjufrågorna behöver mindre tid ägnas åt att
@@ -205,17 +205,28 @@
         class="scroll-area lg:h-screen bg-purple-200 flex justify-center items-center"
       >
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-row justify-center items-center h-3/5 w-3/5 relative"
         >
-          <img
-            src="/textblob/textblob_4.svg"
-            class="absolute z-0 h-full w-full rotate-180"
-            alt="blob"
-          />
-          <h1 class="text-center z-10 relative text-3xl font-bowlby">
-            Personerna bakom konceptet:
-          </h1>
-          <p class="text-lg text-center px-28 z-10 font-mali"></p>
+          <div class="flex flex-col">
+            <img src="/letters/m.svg" class="" alt="letter M" />
+            <h2 class="font-gloria text-center">Mikaelah</h2>
+            <h2 class="font-gloria text-center">Game-Programmer</h2>
+          </div>
+          <div class="flex flex-col justify-center">
+            <img src="/letters/s.svg" class="" alt="letter S" />
+            <h2 class="font-gloria text-center">Simon</h2>
+            <h2 class="font-gloria text-center">Webbutvecklare</h2>
+          </div>
+          <div class="flex flex-col justify-center">
+            <img src="/letters/p.svg" class="" alt="letter P" />
+            <h2 class="font-gloria text-center">Petter</h2>
+            <h2 class="font-gloria text-center">Webbutvecklare</h2>
+          </div>
+          <div class="flex flex-col justify-center">
+            <img src="/letters/n.svg" class="" alt="letter N" />
+            <h2 class="font-gloria text-center">Nina</h2>
+            <h2 class="font-gloria text-center">UX-Designer</h2>
+          </div>
         </div>
       </section>
     </div>
