--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
       </div>
       <section
         id="section-one"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex justify-center items-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex flex-col justify-center items-center"
       >
         <!-- <img src="/blobs/blob_1.svg" class="h-2/4" alt="blob" />
         <img src="/blobs/blob_2.svg" class="h-32" alt="blob" />
         <img src="/blobs/blob_3.svg" class="h-32" alt="blob" />
         <img src="/blobs/blob_4.svg" class="h-32" alt="blob" /> -->
+        <h1 class="font-gloria text-8xl">YRGO</h1>
         <div
           class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
         >
@@ -170,40 +171,67 @@
         class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center items-center"
       >
         <div
-          class="flex flex-col justify-center items-center h-full w-5/6 relative bg-cyan-100"
+          class="flex flex-col justify-center items-center h-full w-5/6 relative"
         >
           <img
             src="/textblob/textblob_6.svg"
             class="absolute z-0 h-full w-full"
             alt="blob"
           />
-          <h1 class="text-center z-10 relative text-3xl font-bowlby">
+          <h2 class="text-center z-10 relative text-3xl font-bowlby">
             För lärare
-          </h1>
-          <p class="text-lg text-center px-40 z-10 font-mali">
+          </h2>
+          <h3 class="text-lg text-center px-44 z-10 font-mali">
             På vilket sätt är då detta en kostnadseffektiv lösning?
+          </h3>
+          <p class="text-lg text-center px-44 z-10 font-mali">
             Automatiserad intervjuprocess - tack vare att den sökande själv
             spelar in svar på intervjufrågorna behöver mindre tid ägnas åt att
-            hålla intervjuer Mångfacetterat urvalsprov - förutom att provet gör
-            det möjligt för fler att briljera i de olika delarna, består det
-            även av frågor som inte kräver manuell rättning - win win! Allt på
-            en plattform - allt material från ansökan, prov och intervjuer
-            samlas på en plattform. Mindre pappersarbete att hålla koll på, och
-            mycket enklare att få en överblick. Reklam för YRGO - en
-            ansökningsprocess som snarare kan beskrivas som en minnesvärd
+            hålla intervjuer
+          </p>
+          <h3 class="text-lg text-center px-44 z-10 font-mali">
+            Mångfacetterat urvalsprov
+          </h3>
+          <p class="text-lg text-center px-44 z-10 font-mali">
+            Förutom att provet gör det möjligt för fler att briljera i de olika
+            delarna, består det även av frågor som inte kräver manuell rättning
+            - win win!
+          </p>
+          <h3 class="text-lg text-center px-44 z-10 font-mali">
+            Allt på en plattform
+          </h3>
+          <p class="text-lg text-center px-44 z-10 font-mali">
+            Allt material från ansökan, prov och intervjuer samlas på en
+            plattform. Mindre pappersarbete att hålla koll på, och mycket
+            enklare att få en överblick.
+          </p>
+          <h3 class="text-lg text-center px-44 z-10 font-mali">
+            Reklam för YRGO
+          </h3>
+          <p class="text-lg text-center px-44 z-10 font-mali">
+            En ansökningsprocess som snarare kan beskrivas som en minnesvärd
             upplevelse är något man vill berätta om för nära och kära.
             Marknadsföring som sköter sig själv innebär mindre utgifter för
-            YRGO. Tillgänglighet - det är självklart att ansökningsprocessen ska
-            vara tillgänglig för alla. Därför uppfyller ansökningsplattformen
-            WCAG-riktlinjerna, och ansökande har alltid möjlighet att be om
-            anpassningar, så som muntliga prov, mer tid eller egen provsal.
+            YRGO.
+          </p>
+          <h3 class="text-lg text-center px-44 z-10 font-mali">
+            Tillgänglighet
+          </h3>
+          <p class="text-lg text-center px-44 z-10 font-mali">
+            Det är självklart att ansökningsprocessen ska vara tillgänglig för
+            alla. Därför uppfyller ansökningsplattformen WCAG-riktlinjerna, och
+            ansökande har alltid möjlighet att be om anpassningar, så som
+            muntliga prov, mer tid eller egen provsal.
           </p>
         </div>
       </section>
       <section
         id="section-seven"
-        class="scroll-area lg:h-screen bg-purple-200 flex justify-center items-center"
+        class="scroll-area lg:h-screen bg-purple-200 flex justify-center items-center flex-col"
       >
+        <h1 class="font-gloria text-4xl">
+          MYNDIGHETEN FÖR SKOLPLANERINGSNAVIGERING
+        </h1>
         <div
           class="flex flex-row justify-center items-center h-3/5 w-3/5 relative"
         >
