--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         class="scroll-area lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex flex-col justify-center items-center"
       >
         <img
-          class="absolute top-5 left-5 h-14"
+          class="absolute top-5 left-3 h-14 z-50"
           src="/public/images/Group 1.svg"
           alt="blob"
         />
