--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             att urvalsprovs-ölen på kvällen är tradition.
           </p>
         </div>
-        <img src="/blobs/blob_7.svg" class="h-2/4 w-2/5" alt="blob" />
+        <img src="/blobs/blob_7.svg" class="h-2/4 w-2/5 rotate-90" alt="blob" />
       </section>
       <section
         id="section-six"
