--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -39,11 +39,13 @@
         id="section-one"
         class="scroll-area lg:h-screen bg-gradient-to-b from-red-300 to-orange-300 flex flex-col justify-center items-center"
       >
-        <img
-          class="absolute top-5 left-3 h-14 z-50"
-          src="/public/images/Group 1.svg"
-          alt="blob"
-        />
+        <a href="#section-one">
+          <img
+            class="absolute top-5 left-3 h-14 z-50"
+            src="/public/images/Group 1.svg"
+            alt="blob"
+        /></a>
+
         <!-- <img src="/blobs/blob_1.svg" class="h-2/4" alt="blob" />
         <img src="/blobs/blob_2.svg" class="h-32" alt="blob" />
         <img src="/blobs/blob_3.svg" class="h-32" alt="blob" />
