fixed some import errors

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Myndigheten För Skolplanerings-navigering</title>
-    <link rel="icon" type="image/x-icon" href="/public/images/mspnFav.png" />
+    <link rel="icon" type="image/x-icon" href="/images/mspnFav.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Mali&display=swap"
       rel="stylesheet"
@@ -42,7 +42,7 @@
         <a href="#section-one">
           <img
             class="absolute top-5 left-3 h-14 z-50"
-            src="/public/images/Group 1.svg"
+            src="/images/Group_1.svg"
             alt="blob"
         /></a>
 
@@ -235,7 +235,7 @@
       </section>
       <section
         id="section-seven"
-        class="scroll-area lg:h-screen bg-purple-200 flex justify-center items-center flex-col"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-purple-200 to-purple-300 flex justify-center items-center flex-col"
       >
         <h1 class="font-gloria text-4xl">
           MYNDIGHETEN FÖR SKOLPLANERINGSNAVIGERING
