added gradient to last section, switched one of the blobs

--- a/index.html
+++ b/index.html
@@ -172,7 +172,11 @@
             att urvalsprovs-ölen på kvällen är tradition.
           </p>
         </div>
-        <img src="/blobs/blob_7.svg" class="h-2/4 w-2/5 rotate-90" alt="blob" />
+        <img
+          src="/blobs/blob_10.svg"
+          class="h-2/4 w-2/5 rotate-90"
+          alt="blob"
+        />
       </section>
       <section
         id="section-six"
