--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -31,9 +31,10 @@
         <a id="sectionTwoAnchor" href="#section-two">Intervju</a>
         <a id="sectionThreeAnchor" href="#section-three">Urvalsprov</a>
         <a id="sectionFourAnchor" href="#section-four">Provet</a>
-        <a id="sectionFiveAnchor" href="#section-five">Efter provet</a>
-        <a id="sectionSixAnchor" href="#section-six">För lärare</a>
-        <a id="sectionSevenAnchor" href="#section-seven">Om oss</a>
+        <a id="sectionFiveAnchor" href="#section-five">Demo</a>
+        <a id="sectionSixAnchor" href="#section-six">Efter provet</a>
+        <a id="sectionSevenAnchor" href="#section-seven">För lärare</a>
+        <a id="sectionEightAnchor" href="#section-eight">Om oss</a>
       </div>
       <section
         id="section-one"
@@ -45,11 +46,6 @@
             src="/images/Group_1.svg"
             alt="blob"
         /></a>
-
-        <!-- <img src="/blobs/blob_1.svg" class="h-2/4" alt="blob" />
-        <img src="/blobs/blob_2.svg" class="h-32" alt="blob" />
-        <img src="/blobs/blob_3.svg" class="h-32" alt="blob" />
-        <img src="/blobs/blob_4.svg" class="h-32" alt="blob" /> -->
         <h1 class="font-gloria text-8xl">YRGO</h1>
         <div
           class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
@@ -152,6 +148,26 @@
       </section>
       <section
         id="section-five"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center items-center"
+      >
+        <img src="/blobs/blob_5.svg" class="h-2/4 w-2/5" alt="blob" />
+
+        <div
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+        >
+          <img
+            src="/textblob/textblob_2.svg"
+            class="absolute z-0 h-full w-full rotate-180"
+            alt="blob"
+          />
+          <h1 class="text-center z-10 relative text-3xl font-bowlby">Demo</h1>
+          <p class="text-lg text-center px-28 z-10 font-mali">
+            Demonstration av frågor:
+          </p>
+        </div>
+      </section>
+      <section
+        id="section-six"
         class="scroll-area lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex align-center justify-center items-center"
       >
         <div
@@ -179,7 +195,7 @@
         />
       </section>
       <section
-        id="section-six"
+        id="section-seven"
         class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center items-center"
       >
         <div
@@ -238,7 +254,7 @@
         </div>
       </section>
       <section
-        id="section-seven"
+        id="section-eight"
         class="scroll-area lg:h-screen bg-gradient-to-b from-purple-200 to-purple-300 flex justify-center items-center flex-col"
       >
         <h1 class="font-gloria text-4xl">
