--- a/index.html
+++ b/index.html
@@ -263,22 +263,22 @@
         >
           <div class="flex flex-col">
             <img src="/letters/m.svg" class="" alt="letter M" />
-            <h2 class="font-gloria text-center">Mikaelah</h2>
+            <h2 class="font-gloria text-center">Mikaelah J</h2>
             <h2 class="font-gloria text-center">Game-Programmer</h2>
           </div>
           <div class="flex flex-col justify-center">
             <img src="/letters/s.svg" class="" alt="letter S" />
-            <h2 class="font-gloria text-center">Simon</h2>
+            <h2 class="font-gloria text-center">Simon L</h2>
             <h2 class="font-gloria text-center">Webbutvecklare</h2>
           </div>
           <div class="flex flex-col justify-center">
             <img src="/letters/p.svg" class="" alt="letter P" />
-            <h2 class="font-gloria text-center">Petter</h2>
+            <h2 class="font-gloria text-center">Petter J</h2>
             <h2 class="font-gloria text-center">Webbutvecklare</h2>
           </div>
           <div class="flex flex-col justify-center">
             <img src="/letters/n.svg" class="" alt="letter N" />
-            <h2 class="font-gloria text-center">Nina</h2>
+            <h2 class="font-gloria text-center">Nina W</h2>
             <h2 class="font-gloria text-center">UX-Designer</h2>
           </div>
         </div>
