--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="z-50 flex flex-col left-0 bg-slate-600 w-32 h-full fixed bg-opacity-0 pl-1.5 justify-end gap-1.5"
+        class="z-50 flex flex-col left-0 bg-slate-600 w-32 h-full fixed bg-opacity-0 pl-1.5 justify-end gap-1.5 pl-3 pb-3"
       >
         <a class="scale-up-anchor" id="sectionOneAnchor" href="#section-one"
           >Grattis!
@@ -42,7 +42,7 @@
       >
         <a href="#section-one">
           <img
-            class="absolute top-5 left-3 h-14 z-50"
+            class="absolute top-5 left-3 h-20 z-50"
             src="/images/Group_1.svg"
             alt="blob"
         /></a>
