--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -121,34 +121,51 @@
       </section>
       <section
         id="section-four"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center items-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-green-200 flex justify-center items-center"
       >
         <img src="/blobs/blob_5.svg" class="h-2/4 w-2/5" alt="blob" />
 
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-col justify-center items-center h-4/5 w-4/5 relative  text-left px-[10%]"
         >
           <img
-            src="/textblob/textblob_2.svg"
-            class="absolute z-0 h-full w-full rotate-180"
+            src="/textblob/textblob_7.svg"
+            class="absolute z-0 h-full w-full"
             alt="blob"
           />
           <h1 class="text-center z-10 relative text-3xl font-bowlby">Provet</h1>
-          <p class="text-lg text-left px-28 z-10 font-mali">
+          <p class="text-lg text-left z-10 font-mali">
             Själva urvalsprovet består av olika delar för att vi ska få en så
-            bred bild av dina kunskaper som möjligt. ✅ Öppna frågor - du får
-            reflektera och svara på en fråga med egna ord ✅ Frågor om AI - AI
-            är en del av branschens framtid ✅ Matcha kod - para ihop rätt kod
-            med rätt resultat (?) ✅ Kod utan kod - vi vill se att du kan
-            beskriva korrekta processer ✅ Spelfrågor - berätta om och diskutera
-            olika spel Vid behov finns möjlighet att göra provet muntligt eller
-            i en enskild lokal. Kontakta oss för mer information.
+            bred bild av dina kunskaper som möjligt.
+          </p>
+
+          <p class="text-lg text-left z-10 font-mali">
+              Öppna frågor - du får reflektera och svara på en fråga med egna ord.
+          </p>
+
+          <p class="text-lg text-left z-10 font-mali">
+            Frågor om AI - AI är en del av branschens framtid.
+          </p>
+
+          <p class="text-lg text-left z-10 font-mali">
+            Matcha kod -
+            para ihop rätt kod med rätt resultat.
+          </p>
+
+          <p class="text-lg text-left z-10 font-mali">
+            Kod utan kod - vi vill se
+            att du kan beskriva korrekta processer.
+          </p> 
+          
+          <p class="text-lg text-left z-10 font-mali">Spelfrågor - berätta om
+            och diskutera olika spel Vid behov finns möjlighet att göra provet
+            muntligt eller i en enskild lokal. Kontakta oss för mer information.</p>
           </p>
         </div>
       </section>
       <section
         id="section-five"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-blue-200 flex justify-center items-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-green-200 to-blue-200 flex justify-center items-center"
       >
         <img src="/blobs/blob_5.svg" class="h-2/4 w-2/5" alt="blob" />
 
