--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="z-50 flex flex-col left-0 bg-slate-600 w-32 h-full fixed bg-opacity-0 pl-1.5 justify-end gap-1.5 pl-3 pb-3"
+        class="z-50 flex flex-col left-0 bg-slate-600 w-32 h-full fixed bg-opacity-0 pl-1.5 justify-end gap-1.5 pl-3 pb-3 font-gloria"
       >
         <a class="scale-up-anchor" id="sectionOneAnchor" href="#section-one"
           >Grattis!
@@ -97,7 +97,7 @@
         class="scroll-area lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center items-center"
       >
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative ml-14"
         >
           <img
             src="/textblob/textblob_1.svg"
